// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test SegmentedControl click on selected index 1`] = `
<div
  className="segmented-control"
>
  <div
    className="seg-item selected"
    key="0"
    onClick={[Function]}
    title="tCorner"
  >
    <img
      className="seg-item-image"
      src="img/right-panel/icon-nodetype-0.svg"
    />
  </div>
  <div
    className="seg-item"
    key="1"
    onClick={[Function]}
    title="tSmooth"
  >
    <img
      className="seg-item-image"
      src="img/right-panel/icon-nodetype-1.svg"
    />
  </div>
  <div
    className="seg-item"
    key="2"
    onClick={[Function]}
    title="tSymmetry"
  >
    <img
      className="seg-item-image"
      src="img/right-panel/icon-nodetype-2.svg"
    />
  </div>
</div>
`;

exports[`test SegmentedControl disabled 1`] = `
<div
  className="segmented-control disabled"
>
  <div
    className="seg-item selected"
    key="0"
    onClick={[Function]}
    title="tCorner"
  >
    <img
      className="seg-item-image"
      src="img/right-panel/icon-nodetype-0.svg"
    />
  </div>
  <div
    className="seg-item"
    key="1"
    onClick={[Function]}
    title="tSmooth"
  >
    <img
      className="seg-item-image"
      src="img/right-panel/icon-nodetype-1.svg"
    />
  </div>
  <div
    className="seg-item"
    key="2"
    onClick={[Function]}
    title="tSymmetry"
  >
    <img
      className="seg-item-image"
      src="img/right-panel/icon-nodetype-2.svg"
    />
  </div>
</div>
`;

exports[`test SegmentedControl enabled 1`] = `
<div
  className="segmented-control"
>
  <div
    className="seg-item selected"
    key="0"
    onClick={[Function]}
    title="tCorner"
  >
    <img
      className="seg-item-image"
      src="img/right-panel/icon-nodetype-0.svg"
    />
  </div>
  <div
    className="seg-item"
    key="1"
    onClick={[Function]}
    title="tSmooth"
  >
    <img
      className="seg-item-image"
      src="img/right-panel/icon-nodetype-1.svg"
    />
  </div>
  <div
    className="seg-item"
    key="2"
    onClick={[Function]}
    title="tSymmetry"
  >
    <img
      className="seg-item-image"
      src="img/right-panel/icon-nodetype-2.svg"
    />
  </div>
</div>
`;

exports[`test SegmentedControl multiple selected indexes 1`] = `
<div
  className="segmented-control"
>
  <div
    className="seg-item selected"
    key="0"
    onClick={[Function]}
    title="tCorner"
  >
    <img
      className="seg-item-image"
      src="img/right-panel/icon-nodetype-0.svg"
    />
  </div>
  <div
    className="seg-item"
    key="1"
    onClick={[Function]}
    title="tSmooth"
  >
    <img
      className="seg-item-image"
      src="img/right-panel/icon-nodetype-1.svg"
    />
  </div>
  <div
    className="seg-item"
    key="2"
    onClick={[Function]}
    title="tSymmetry"
  >
    <img
      className="seg-item-image"
      src="img/right-panel/icon-nodetype-2.svg"
    />
  </div>
</div>
`;
